Fixed build on Windows again Added Chrome debugging option

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,8 @@
 {
-	"recommendations": ["dbaeumer.vscode-eslint", "esbenp.prettier-vscode", "jpoissonnier.vscode-styled-components"]
+	"recommendations": [
+		"dbaeumer.vscode-eslint",
+		"esbenp.prettier-vscode",
+		"jpoissonnier.vscode-styled-components",
+		"msjsdiag.debugger-for-chrome"
+	]
 }
