--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 	"dependencies": {
 		"@fluentui/react": "^7.123.9",
 		"@reduxjs/toolkit": "^1.4.0",
+		"playfab-sdk": "^2.51.200713",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
 		"react-helmet": "^6.1.0",
@@ -33,7 +34,8 @@
 	},
 	"scripts": {
 		"start": "react-scripts start",
-		"build": "set \"GENERATE_SOURCEMAP=false\" && react-scripts build",
+		"build": "GENERATE_SOURCEMAP=false react-scripts build",
+		"build-win": "set \"GENERATE_SOURCEMAP=false\" && react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
 	},
