--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 	"dependencies": {
 		"@fluentui/react": "^7.123.9",
 		"@reduxjs/toolkit": "^1.4.0",
-		"playfab-sdk": "^2.51.200713",
+		"playfab-sdk": "file:./src/playfab-beta-sdk",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
 		"react-helmet": "^6.1.0",
